2012-02-19  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.3.1

	* iTunesFS.xcodeproj: reenabled ppc for Release builds, as ppc also
	  returned in OSXFUSE 2.3.9 user libraries (which we link against and
	  hence need ppc in order to support ppc binaries).

2011-09-23  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.3.0

	* Link against OSXFUSE (http://osxfuse.github.com/) on MacOS X as of
	  now. As a consequence of the OSXFUSE build process, PPC support
	  is removed.

2011-05-25  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.3b1

	* iTunesTrack.[hm]: extract "Comments" from iTunes library and expose
	  as "comments" property

	* English.lproj/{AlbumsTrackFormat.txt, PlaylistsTrackFormat.txt}:
	  documented %(comments)

2011-04-23  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.2

	* iPodLibrary.m: extract a lot more properties from track items,
	  persistentID from playlists

	* iTunesTrack.[hm], iTunesPlaylist.[hm]: merged init methods, provide
	  "keys" for representations

	* iTunesTrack.[hm]: also added quite a lot new properties

	* English.lproj/{AlbumsTrackFormat.txt,PlaylistsTrackFormat.txt}:
	  documented new properties

2011-02-26  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesPlaylist.m: only show PlaylistsTrackFormat file if it really
	  exists (isn't true for real Playlist folders)

2011-02-25  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesFSFormatter.m: fixed bug with leading "/" in path components

2011-02-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.1

2011-02-19  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.1b1

	* iTunesTrack.[hm]: added -genre and -grouping as properties for
	  formatting tracks on user request

	* English.lproj/{AlbumsTrackFormat.txt, PlaylistsTrackFormat.txt}:
	  documented %(genre) and %(grouping)

	* README-GNUstep: updated

2011-02-18  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesFSFormatter.m: set formatter behaviour explicitly to 10.0
